--- a/style.css
+++ b/style.css
@@ -171,7 +171,8 @@ font-family: montserrat;
     border-radius: 4px;
     padding: 10px;
     padding-right: 15px;
-    border: black 1px solid
+    border: black 1px solid;
+    z-index: 2;
 
   }
 
@@ -584,6 +585,36 @@ visibility: hidden;
     .menu-abertura{
         font-size: 16px;
     }
+
+    .container-footer{
+        flex-direction: column;
+    }
+    .container-footer h1{
+        text-align: center;
+    }
+    .container-footer p{
+        text-align: center;
+    }
+    .container-contato{
+        text-align: center;
+        margin-bottom: 5vh;
+        margin-top: -8vh;
+    }
+    .container-endereco{
+        margin-top: 17vw;
+    }
+    .logo-footer{
+        margin: auto;
+        width: 50%
+    }
+    
+    .pc{
+        display: none;
+    }
+    .celular{
+        display: inline-block;
+    }
+
     
 }
 @media (max-width: 858px){
@@ -601,7 +632,7 @@ visibility: hidden;
         flex-direction: column;
         position: fixed;
         width: 100%;
-        height: 100vh;
+        height: 120vh;
         background: rgb(10, 10, 10);
         left: -100%;
         top: 0vh;
@@ -675,6 +706,13 @@ visibility: hidden;
         left: 74%;
         top: 38%
     }
+
+    .container-endereco{
+        margin-top: 11vw;
+    }
+    .logo-footer{
+        width: 65%
+    }
     
 /* ------------------------ */
     .fotos{
@@ -713,6 +751,9 @@ visibility: hidden;
         margin: 0;
         text-align: center;
         margin-top: 0;
+        padding-top: 0;
+        padding-bottom: 0;
+        padding-right: 50px
     }
     .menu-abertura {
     font-size: 18px;
@@ -722,33 +763,7 @@ visibility: hidden;
   
 }
 @media (max-width: 740px){
-    .container-footer{
-        flex-direction: column;
-    }
-    .container-footer h1{
-        text-align: center;
-    }
-    .container-footer p{
-        text-align: center;
-    }
-    .container-contato{
-        text-align: center;
-        margin-bottom: 5vh;
-        margin-top: -8vh;
-    }
-    .logo-footer{
-        margin: auto;
-        width: 100%;
-    }
-    .logo-whats{
-        display: none;
-    }
-    .pc{
-        display: none;
-    }
-    .celular{
-        display: inline-block;
-    }
+    
     .fotos:hover{
         transform: none;
     }
@@ -758,6 +773,12 @@ visibility: hidden;
     #popup{
         left: 50%;
         top: 42%
+    }
+    .container-endereco{
+        margin-top: 5vw;
+    }
+    .logo-footer{
+        width: 80%
     }
    
 }
@@ -808,6 +829,15 @@ visibility: hidden;
             text-align: center;
             text-decoration: underline;         
         }
+
+        .container-endereco{
+            margin-top: 0;
+        }
+
+        .logo-footer{
+            width: 100%
+        }
+       
         
         
 }
@@ -828,6 +858,10 @@ visibility: hidden;
         width: 330px;
         height: 330px;
     }
+    .container-endereco{
+        margin-top: 0;
+    }
+   
 }
 
 @media (max-width:440px){
