--- a/style.css
+++ b/style.css
@@ -809,6 +809,9 @@ visibility: hidden;
     .logo{
         width: 120px;
     }
+    .logo-footer {
+        width: 40%;
+    }
 }
 
 @media (max-width:550px){
